src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision.stderr
error: unexpected token: `,`
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:17
   |
LL |         [_, 99.., _] => {},
   |                 ^

error: aborting due to previous error

